TURMERIC-1441: Fix of some findBugs issues.
git-svn-id: http://www.ebayopensource.org/svn/turmeric/soa-platform/trunk/monitoring@1150 f631a2f7-0bfe-4ef6-91ca-5e61167123dd